# Kx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  pr.yml  release.yml  tag.yml
demo/: demo.tape
docs/superpowers/specs/: 2026-05-23-github-workflows-design.md  2026-06-12-rich-console-design.md
scripts/: gen_command_table.py
src/kx/: config.py  console.py  events.py  graph.py  index.py  k8s.py  kinds.py  kubectl.py  main.py  state.py  types.py
src/kx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/kx/commands/: back.py  delete.py  describe.py  drop.py  edit.py  events.py  exec.py  forward.py  get.py  labels.py  logs.py  namespace.py  port_forward.py  rollout.py  scale.py  state.py  tree.py  yaml.py
tests/: test_back.py  test_cli_get.py  test_config.py  test_console.py  test_describe.py  test_drop.py  test_edit.py  test_exec.py  test_forward.py  test_get.py  test_index.py  test_kinds.py  test_labels.py  test_logs.py  test_namespace.py  test_port_forward.py  test_rollout.py  test_scale.py  test_state.py  test_yaml.py
