[project]
name = "kx-cli"
version = "0.0.0"
description = "kubectl wrapper with index-based resource selection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "click",
    "kubernetes",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]

[project.scripts]
kx = "kx.main:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
