[project]
name = "kx-cli"
version = "0.0.5"
description = "kubectl wrapper with index-based resource selection"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer==0.26.8",
    "kubernetes",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]

[project.scripts]
kx = "kx.main:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
